# Urban-Route-Resilience

./: .gitignore  PROJECT_STATE.md  README.md  environment.yml  pyproject.toml  roadmap.md
Registration_Requirements/: 00_Registration_Checklist.md  01_Proposal.md  03_References.md  04_Final_Review_Checklist.md  README.md
Registration_Requirements/02_Diagrams/: Dashboard_Mockup.md  Pipeline_Flowchart.md  System_Architecture.md  Workflow_Diagram.md
configs/: base.yaml  data.yaml  graph.yaml  model_baseline.yaml  model_dlinknet.yaml  model_segformer.yaml  places.yaml  train.yaml  train_dlinknet.yaml  train_segformer.yaml
data/: README.md
docs/: ARCHITECTURE.md  TRAINING.md
notebooks/: train_colab.ipynb  train_kaggle.ipynb
scripts/: build_dataset.py  build_graph.py  evaluate.py  heal_graph.py  preview_occlusion.py  resilience_demo.py  run_pipeline.py  train.py
src/route_resilience/: __init__.py  config.py  paths.py  pipeline.py
src/route_resilience/dashboard/: __init__.py  app.py  service.py
src/route_resilience/data/: __init__.py  build.py  dataset.py  geo.py  occlusion.py  osm.py  split.py  synth_image.py
src/route_resilience/evaluation/: __init__.py  evaluate.py  metrics.py
src/route_resilience/graph/: __init__.py  build.py  heal.py  metrics.py  skeletonize.py
src/route_resilience/models/: tta.py  (+4 more)
tests/: test_cldice.py  test_dashboard.py  test_data_pipeline.py  test_dlinknet.py  test_eval_metrics.py  test_evaluate.py  test_graph.py  test_healing.py  test_model.py  test_occlusion.py  test_pipeline.py  test_resilience.py  test_smoke.py  test_tta.py
(+8 files in other folders)
